--- a/testjenkins/app/views/home/index.html.erb
+++ b/testjenkins/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet eum a vel quas, tenetur magnam neque aut enim molestias eius atque accusamus, quia pariatur. Sunt recusandae rerum laborum illo?</p>
